--- a/package.json
+++ b/package.json
@@ -18,9 +18,17 @@
   },
   "homepage": "https://github.com/edersonsousa/teste-front-end#readme",
   "dependencies": {
-    "lint": "^0.7.0"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-promise-router": "^4.0.1",
+    "lint": "^0.7.0",
+    "mongoose": "^5.10.11"
   },
   "devDependencies": {
-    "eslint": "^7.12.1"
+    "eslint": "^7.12.1",
+    "husky": "^4.3.0",
+    "nodemon": "^2.0.6",
+    "swagger": "^0.7.5"
   }
 }
